--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "author": "aearsears",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "next": "^11.0.1",
+    "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
+    "cors": "^2.8.5",
     "eslint": "^7.31.0",
     "eslint-config-next": "^11.0.1",
     "postcss": "^8.3.6",
