--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "aearsears",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "dotenv": "^10.0.0",
     "next": "^11.0.1",
     "pg": "^8.7.1",
