--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recharts": "^2.1.2",
     "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
