--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "dotenv": "^10.0.0",
+    "formik": "^2.2.9",
     "next": "^11.0.1",
     "pg": "^8.7.1",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "recharts": "^2.1.2",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "^2.2.7",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
