--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
   "devDependencies": {
     "autoprefixer": "^10.3.1",
     "cors": "^2.8.5",
-    "eslint": "^7.31.0",
-    "eslint-config-next": "^11.0.1"
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.25.1"
   }
 }
