--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,10 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "standard"
-    ],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
+    "extends":["next/core-web-vitals"],
     "rules": {
-        "no-unused-vars":"warn",
-        "semi":[2,"always"],
-        "indent":["warn",4],
+        "no-unused-vars": "warn",
+        "semi": [2, "always"],
+        "indent": ["warn", 4],
         "react/prop-types": "off",
-        "brace-style":[2,"stroustrup"]
+        "brace-style": [2, "stroustrup"]
     }
 }
