--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx": "^0.1.0",
+    "eslint-plugin-next": "0.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.25.1"
